--- a/index.html
+++ b/index.html
@@ -2,7 +2,24 @@
 <html>
 <head>
     <script src='https://cdn1.kongregate.com/javascripts/kongregate_api.js'></script>
-    </head>
+    <script src="break_infinity.js"></script>
+    <script src="Javascript/lz-string.js"></script>
+    <script src="Javascript/buystuff.js"></script>
+    <script src="Javascript/toggles.js"></script>
+    <script src="Synergism.js"></script>
+    <script src="Javascript/variables.js"></script>
+    <script src="Javascript/upgrades.js"></script>
+    <script src="Javascript/achievements.js"></script>
+    <script src="Javascript/reset.js"></script>
+    <script src="Javascript/diamonds.js"></script>
+    <script src="Javascript/challenges.js"></script>
+    <script src="Javascript/runes.js"></script>
+    <script src="Javascript/TaxTEST.js"></script>
+    <script src="Javascript/automation.js"></script>
+    <script src="Javascript/exportimport.js"></script>
+    <script src="Javascript/updatehtml.js"></script>
+    <!-- <script src="developercommands.js"></script> -->
+</head>
 <main>
 
 <img src="Pictures/preloader.png" id="preload">    
@@ -1030,24 +1047,6 @@
           });
         });
       </script>
-
-    <script src="break_infinity.js"></script>
-    <script src="Javascript/buystuff.js"></script>
-    <script src="Javascript/toggles.js"></script>
-    <script src="Javascript/lz-string.js"></script>
-    <script src="Synergism.js"></script>
-    <script src="Javascript/variables.js"></script>
-    <script src="Javascript/upgrades.js"></script>
-    <script src="Javascript/achievements.js"></script>
-    <script src="Javascript/reset.js"></script>
-    <script src="Javascript/diamonds.js"></script>
-    <script src="Javascript/challenges.js"></script>
-    <script src="Javascript/runes.js"></script>
-    <script src="Javascript/TaxTEST.js"></script>
-    <script src="Javascript/automation.js"></script>
-    <script src="Javascript/exportimport.js"></script>
-    <script src="Javascript/updatehtml.js"></script>
-    <script src="developercommands.js"></script>
 
     </main>
     </html>
