--- a/index.html
+++ b/index.html
@@ -2,22 +2,7 @@
 <html>
 <head>
     <script src='https://cdn1.kongregate.com/javascripts/kongregate_api.js'></script>
-    <script src="break_infinity.js"></script>
-    <script src="Javascript/lz-string.js"></script>
-    <script src="Javascript/buystuff.js"></script>
-    <script src="Javascript/toggles.js"></script>
-    <script src="Synergism.js"></script>
-    <script src="Javascript/variables.js"></script>
-    <script src="Javascript/upgrades.js"></script>
-    <script src="Javascript/achievements.js"></script>
-    <script src="Javascript/reset.js"></script>
-    <script src="Javascript/diamonds.js"></script>
-    <script src="Javascript/challenges.js"></script>
-    <script src="Javascript/runes.js"></script>
-    <script src="Javascript/TaxTEST.js"></script>
-    <script src="Javascript/automation.js"></script>
-    <script src="Javascript/exportimport.js"></script>
-    <script src="Javascript/updatehtml.js"></script>
+    <script src="index.js"></script>
     <!-- <script src="developercommands.js"></script> -->
 </head>
 <main>
@@ -1036,16 +1021,12 @@
 
 
     <link rel="stylesheet" href="Synergism.css">
-
-
-    <script type='text/javascript'>
-    
-        kongregateAPI.loadAPI(function(){
-          window.kongregate = kongregateAPI.getAPI();
-    
-          kongregate.services.addEventListener('login', function(){
-          });
-        });
+        <script type='text/javascript'>
+            if('kongregateAPI' in window) {
+                kongregateAPI.loadAPI(function() {
+                    window.kongregate = kongregateAPI.getAPI();
+                });
+            }
       </script>
 
     </main>
