--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <script src='https://cdn1.kongregate.com/javascripts/kongregate_api.js'></script>
     <script src="break_infinity.js"></script>
     <script src="lz-string.js"></script>
-    <script src="index.js"></script>
+    <script src="synergism.min.js"></script>
     <!-- <script src="developercommands.js"></script> -->
 </head>
 <main>
