QoL: btn border color on page load

--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
     <div id="buyamountcoin">
         <table class="coinunlock3" id="coinbuyamount">
             <tr>
-            <td><img  id="coinone" src="Pictures/Transparent Pics/CoinOne.png" style="cursor:pointer; background-color: green;" onclick="toggleBuyAmount(1,'coin')"></td>
+            <td><img  id="coinone" src="Pictures/Transparent Pics/CoinOne.png" style="cursor:pointer;background-color: green;" onclick="toggleBuyAmount(1,'coin')"></td>
             <td><img  id="cointen" src="Pictures/Transparent Pics/CoinTen.png"  style="cursor:pointer;" onclick="toggleBuyAmount(10,'coin')"></td>    
             <td><img  id="coinhundred" src="Pictures/Transparent Pics/CoinHundred.png"  style="cursor:pointer;" onclick="toggleBuyAmount(100,'coin')"></td>        
             </tr>
@@ -150,14 +150,14 @@
         <button class="prestigeunlock" id="buyacceleratorboost" onclick="boostAccelerator()" style="background-color: #070707;">Cost: 500 Coins.</button>
         <p class="prestigeunlock" id="buildtext16" style="color: crimson">Next one adds 1.00% Acceleration Factor.</p>
         
-        <button class="auto" id="toggle1" onclick="toggleSettings(0, this)" style="border:2px solid green; background-color: #171717;">Auto: On</button>
-        <button class="auto" id="toggle2" onclick="toggleSettings(1, this)" style="border:2px solid green; background-color: #171717;">Auto: On</button>
-        <button class="auto" id="toggle3" onclick="toggleSettings(2, this)" style="border:2px solid green; background-color: #171717;">Auto: On</button>
-        <button class="auto" id="toggle4" onclick="toggleSettings(3, this)" style="border:2px solid green; background-color: #171717;">Auto: On</button>
-        <button class="auto" id="toggle5" onclick="toggleSettings(4, this)" style="border:2px solid green; background-color: #171717;">Auto: On</button>
-        <button class="auto" id="toggle6" onclick="toggleSettings(5, this)" style="border:2px solid green; background-color: #171717;">Auto: On</button>
-        <button class="auto" id="toggle7" onclick="toggleSettings(6, this)" style="border:2px solid green; background-color: #171717;">Auto: On</button>        
-        <button class="auto" id="toggle8" onclick="toggleSettings(7, this)" style="border:2px solid green; background-color: #171717;">Auto: On</button>
+        <button class="auto" id="toggle1" onclick="toggleSettings(0, this)" style="background-color: #171717;">Auto: On</button>
+        <button class="auto" id="toggle2" onclick="toggleSettings(1, this)" style="background-color: #171717;">Auto: On</button>
+        <button class="auto" id="toggle3" onclick="toggleSettings(2, this)" style="background-color: #171717;">Auto: On</button>
+        <button class="auto" id="toggle4" onclick="toggleSettings(3, this)" style="background-color: #171717;">Auto: On</button>
+        <button class="auto" id="toggle5" onclick="toggleSettings(4, this)" style="background-color: #171717;">Auto: On</button>
+        <button class="auto" id="toggle6" onclick="toggleSettings(5, this)" style="background-color: #171717;">Auto: On</button>
+        <button class="auto" id="toggle7" onclick="toggleSettings(6, this)" style="background-color: #171717;">Auto: On</button>        
+        <button class="auto" id="toggle8" onclick="toggleSettings(7, this)" style="background-color: #171717;">Auto: On</button>
                                     <p class="prestigeunlock" id="taxinfo" style="color: orange;">Due to your excessive wealth, all coin production is divided by 1.00 to pay taxes!</p>
         <p class="prestigeunlock" id="buildinghotkeys">Press [1], [2], [3], [4], or [5] to buy the corresponding tier starting from the top. Press [A] to buy Accelerator, [M] to buy Multiplier, or [B] to buy Accelerator Boost. Press [left arrow] or [right arrow] to switch tabs. Enjoy!</p>
     </div>
@@ -372,17 +372,17 @@
            </table>
         </div>
         <div id="shoptogglerow">
-            <button class="auto" id="shoptogglecoin" onclick="toggleShops(1, this)" style="border:2px solid green">Auto: ON</button>
-            <button class="auto" id="shoptoggleprestige" onclick="toggleShops(2, this)" style="border:2px solid green">Auto: ON</button>
-            <button class="auto" id="shoptoggletranscend" onclick="toggleShops(3, this)" style="border:2px solid green">Auto: ON</button>
-            <button class="auto" id="shoptogglegenerator" onclick="toggleShops(4, this)" style="border:2px solid green">Auto: ON</button>
+            <button class="auto" id="shoptogglecoin" onclick="toggleShops(1, this)">Auto: [ON]</button>
+            <button class="auto" id="shoptoggleprestige" onclick="toggleShops(2, this)">Auto: [ON]</button>
+            <button class="auto" id="shoptoggletranscend" onclick="toggleShops(3, this)">Auto: [ON]</button>
+            <button class="auto" id="shoptogglegenerator" onclick="toggleShops(4, this)">Auto: [ON]</button>
         </div>
 
         <div id="upgradesrow3">
             <p id="upgradedescription" style="color: beige">Hover over an upgrade icon to see details!</p>
             <p id="upgradecost"></p>
             <p id="upgradeeffect"></p>
-            <button class="auto" id="toggle9" onclick="toggleSettings(8, this)" style="border:2px solid green">Hover-To-Buy: Off</button>
+            <button class="auto" id="toggle9" onclick="toggleSettings(8, this)">Hover-To-Buy: [OFF]</button>
         </div>
         </div>
 
@@ -593,7 +593,7 @@
             <div id="buyamountcrystal">
                 <table id="crystalbuyamount">
                     <tr>
-                    <td><img  id="crystalone" src="Pictures/Transparent Pics/CrystalOne.png" style="cursor:pointer; background-color: green;" onclick="toggleBuyAmount(1,'crystal')"></td>
+                    <td><img  id="crystalone" src="Pictures/Transparent Pics/CrystalOne.png" style="cursor:pointer;background-color: green;" onclick="toggleBuyAmount(1,'crystal')"></td>
                     <td><img  id="crystalten" src="Pictures/Transparent Pics/CrystalTen.png"  style="cursor:pointer;" onclick="toggleBuyAmount(10,'crystal')"></td>    
                     <td><img  id="crystalhundred" src="Pictures/Transparent Pics/CrystalHundred.png"  style="cursor:pointer;" onclick="toggleBuyAmount(100,'crystal')"></td>        
                     </tr>
@@ -609,14 +609,14 @@
             <img id="diamond5" src="Pictures/DiamondTier5.png" style="border: 1px solid cyan">
             </div>
             <div id="autocrystalbuild">
-                <button class="auto" id="toggle10" onclick="toggleSettings(9, this)" style="border:2px solid green; background-color: #171717;">Auto: On</button>
-                <button class="auto" id="toggle11" onclick="toggleSettings(10, this)" style="border:2px solid green; background-color: #171717;">Auto: On</button>
-                <button class="auto" id="toggle12" onclick="toggleSettings(11, this)" style="border:2px solid green; background-color: #171717;">Auto: On</button>
-                <button class="auto" id="toggle13" onclick="toggleSettings(12, this)" style="border:2px solid green; background-color: #171717;">Auto: On</button>
-                <button class="auto" id="toggle14" onclick="toggleSettings(13, this)" style="border:2px solid green; background-color: #171717;">Auto: On</button>
-                <button class="auto" id="toggle15" onclick="toggleSettings(14, this)" style="border:2px solid green; background-color: #171717;">Automatic Prestige & Customization Being Developed!</button>
+                <button class="auto" id="toggle10" onclick="toggleSettings(9, this)" style="background-color: #171717;">Auto: On</button>
+                <button class="auto" id="toggle11" onclick="toggleSettings(10, this)" style="background-color: #171717;">Auto: On</button>
+                <button class="auto" id="toggle12" onclick="toggleSettings(11, this)" style="background-color: #171717;">Auto: On</button>
+                <button class="auto" id="toggle13" onclick="toggleSettings(12, this)" style="background-color: #171717;">Auto: On</button>
+                <button class="auto" id="toggle14" onclick="toggleSettings(13, this)" style="background-color: #171717;">Auto: On</button>
+                <button class="auto" id="toggle15" onclick="toggleSettings(14, this)" style="background-color: #171717;">Automatic Prestige & Customization Being Developed!</button>
                 <div id="prestigeautomation">
-                <button id="prestigeautotoggle" onclick="toggleautoreset(1)" style="border:2px solid green; background-color: #171717;"></button>  
+                <button id="prestigeautotoggle" onclick="toggleautoreset(1)" style="background-color: #171717;"></button>  
                 <input class="transcendunlock" type="number" id="prestigeamount" min="1" max="999999999" defaultValue="1" oninput="updateAutoReset(1)"></input>
                     <p class="transcendunlock" id="autoprestige"></p>
                 </div>
@@ -662,7 +662,7 @@
             <div id="buyamountoffering">
                 <table id="offeringbuyamount">
                     <tr>
-                    <td><img  id="offeringone" src="Pictures/Transparent Pics/OfferingOne.png" style="cursor:pointer; background-color: green;" onclick="toggleBuyAmount(1,'offering')"></td>
+                    <td><img  id="offeringone" src="Pictures/Transparent Pics/OfferingOne.png" style="cursor:pointer;background-color: green;" onclick="toggleBuyAmount(1,'offering')"></td>
                     <td><img  id="offeringten" src="Pictures/Transparent Pics/OfferingTen.png"  style="cursor:pointer;" onclick="toggleBuyAmount(10,'offering')"></td>    
                     <td><img  id="offeringhundred" src="Pictures/Transparent Pics/OfferingHundred.png"  style="cursor:pointer;" onclick="toggleBuyAmount(100,'offering')"></td>        
                     </tr>
@@ -720,7 +720,7 @@
             <div id="buyamountmythos">
                 <table id="mythosbuyamount">
                     <tr>
-                    <td><img  id="mythosone" src="Pictures/Transparent Pics/MythosOne.png" style="cursor:pointer; background-color: green;" onclick="toggleBuyAmount(1,'mythos')"></td>
+                    <td><img  id="mythosone" src="Pictures/Transparent Pics/MythosOne.png" style="cursor:pointer;background-color: green;" onclick="toggleBuyAmount(1,'mythos')"></td>
                     <td><img  id="mythosten" src="Pictures/Transparent Pics/MythosTen.png"  style="cursor:pointer;" onclick="toggleBuyAmount(10,'mythos')"></td>    
                     <td><img  id="mythoshundred" src="Pictures/Transparent Pics/MythosHundred.png"  style="cursor:pointer;" onclick="toggleBuyAmount(100,'mythos')"></td>        
                     </tr>
@@ -736,12 +736,12 @@
             <img id="mythos5" src="Pictures/MythosTier5.png" style="border: 1px solid plum">
             </div>
             <div id="transcendauto">
-                <button class="auto" id="toggle16" onclick="toggleSettings(15, this)" style="border:2px solid green; background-color: #171717;">Auto: Off</button>
-                <button class="auto" id="toggle17" onclick="toggleSettings(16, this)" style="border:2px solid green; background-color: #171717;">Auto: Off</button>
-                <button class="auto" id="toggle18" onclick="toggleSettings(17, this)" style="border:2px solid green; background-color: #171717;">Auto: Off</button>
-                <button class="auto" id="toggle19" onclick="toggleSettings(18, this)" style="border:2px solid green; background-color: #171717;">Auto: Off</button>
-                <button class="auto" id="toggle20" onclick="toggleSettings(19, this)" style="border:2px solid green; background-color: #171717;">Auto: Off</button>
-                <button class="auto" id="toggle21" onclick="toggleSettings(20, this)" style="border:2px solid green; background-color: #171717;">Auto: Off</button>
+                <button class="auto" id="toggle16" onclick="toggleSettings(15, this)" style="background-color: #171717;">Auto: Off</button>
+                <button class="auto" id="toggle17" onclick="toggleSettings(16, this)" style="background-color: #171717;">Auto: Off</button>
+                <button class="auto" id="toggle18" onclick="toggleSettings(17, this)" style="background-color: #171717;">Auto: Off</button>
+                <button class="auto" id="toggle19" onclick="toggleSettings(18, this)" style="background-color: #171717;">Auto: Off</button>
+                <button class="auto" id="toggle20" onclick="toggleSettings(19, this)" style="background-color: #171717;">Auto: Off</button>
+                <button class="auto" id="toggle21" onclick="toggleSettings(20, this)" style="background-color: #171717;">Auto: Off</button>
 
             </div>
             <div id="transcendinfo">
@@ -763,7 +763,7 @@
             <p id="transcendtext10">100 Oracles/sec</p>
             </div>
             <div id="transcendautomation">
-                <button id="transcendautotoggle" onclick="toggleautoreset(2)" style="border:2px solid green; background-color: #171717;"></button>  
+                <button id="transcendautotoggle" onclick="toggleautoreset(2)" style="background-color: #171717;"></button>  
             <input class="transcendunlock" type="number" id="transcendamount" min="1" max="999999999" defaultValue="1" oninput="updateAutoReset(2)">
             <p class="transcendunlock" id="autotranscend"></p>
             </div>
@@ -800,7 +800,7 @@
             <div id="buyamountparticle">
                 <table id="particlebuyamount">
                     <tr>
-                    <td><img  id="particleone" src="Pictures/Transparent Pics/ParticleOne.png" style="cursor:pointer; background-color: green;" onclick="toggleBuyAmount(1,'particle')"></td>
+                    <td><img  id="particleone" src="Pictures/Transparent Pics/ParticleOne.png" style="cursor:pointer;background-color: green;" onclick="toggleBuyAmount(1,'particle')"></td>
                     <td><img  id="particleten" src="Pictures/Transparent Pics/ParticleTen.png"  style="cursor:pointer;" onclick="toggleBuyAmount(10,'particle')"></td>    
                     <td><img  id="particlehundred" src="Pictures/Transparent Pics/ParticleHundred.png"  style="cursor:pointer;" onclick="toggleBuyAmount(100,'particle')"></td>        
                     </tr>
@@ -826,12 +826,12 @@
                 <button id="buyparticles3" style="border: 1px solid white; border-radius: 8px;" onclick="buyProducer('third', 'Particles', 3)">Cost: 1e+4 Particles</button>
                 <button id="buyparticles4" style="border: 1px solid white; border-radius: 8px;" onclick="buyProducer('fourth', 'Particles', 4)">Cost: 1e+8 Particles</button>
                 <button id="buyparticles5" style="border: 1px solid white; border-radius: 8px;" onclick="buyProducer('fifth', 'Particles', 5)">Cost: 1e+16 Particles</button>
-                <button class="auto" id="toggle22" onclick="toggleSettings(21, this)" style="border:2px solid green; background-color: #171717;">Auto: Off</button>
-                <button class="auto" id="toggle23" onclick="toggleSettings(22, this)" style="border:2px solid green; background-color: #171717;">Auto: Off</button>
-                <button class="auto" id="toggle24" onclick="toggleSettings(23, this)" style="border:2px solid green; background-color: #171717;">Auto: Off</button>
-                <button class="auto" id="toggle25" onclick="toggleSettings(24, this)" style="border:2px solid green; background-color: #171717;">Auto: Off</button>
-                <button class="auto" id="toggle26" onclick="toggleSettings(25, this)" style="border:2px solid green; background-color: #171717;">Auto: Off</button>
-                <button class="auto" id="toggle27" onclick="toggleSettings(26, this)" style="border:2px solid green; background-color: #171717;">Auto: Off</button>
+                <button class="auto" id="toggle22" onclick="toggleSettings(21, this)" style="background-color: #171717;">Auto: Off</button>
+                <button class="auto" id="toggle23" onclick="toggleSettings(22, this)" style="background-color: #171717;">Auto: Off</button>
+                <button class="auto" id="toggle24" onclick="toggleSettings(23, this)" style="background-color: #171717;">Auto: Off</button>
+                <button class="auto" id="toggle25" onclick="toggleSettings(24, this)" style="background-color: #171717;">Auto: Off</button>
+                <button class="auto" id="toggle26" onclick="toggleSettings(25, this)" style="background-color: #171717;">Auto: Off</button>
+                <button class="auto" id="toggle27" onclick="toggleSettings(26, this)" style="background-color: #171717;">Auto: Off</button>
             <p id="reincarnationtext3">100 Atoms/sec</p>
             <p id="reincarnationtext4">100 Protons/sec</p>
             <p id="reincarnationtext6">100 Elements/sec</p>
@@ -839,7 +839,7 @@
             <p id="reincarnationtext10">100 Black Holes/sec</p>
             </div>
             <div id="reincarnateautomation">
-                <button id="reincarnateautotoggle" onclick="toggleautoreset(3)" style="border:2px solid green; background-color: #171717;"></button>  
+                <button id="reincarnateautotoggle" onclick="toggleautoreset(3)" style="background-color: #171717;"></button>  
             <input class="reincarnationunlock" type="number" id="reincarnationamount" min="1" max="999999999" defaultValue="1" oninput="updateAutoReset(3)">
             <p class="reincarnationunlock" id="autoreincarnate"></p>
             </div>
@@ -1004,7 +1004,7 @@
             <img class="reincarnationunlock" id="settingpic3" src = "Pictures/Reincarnate.png" style="border: 1px solid green">
             <button class="auto" id="toggle30" onclick="toggleSettings(29, this)" style="border:2px solid green">On</button>
             
-            <button class="transcendunlock" id="retrybutton" onclick="toggleRetryChallenges()" style="border: 2px solid green; background-color: #171717;"></button> 
+            <button class="transcendunlock" id="retrybutton" onclick="toggleRetryChallenges()" style="border: 2px solid green;background-color: #171717;"></button> 
             <button id="exportgame" onclick="exportSynergism()" style="border:2px solid green">Export the game here.</button>
             <button id="importgame" onclick="importSynergism()" style="border: 2px solid green">Import the game here.</button>
             <p id="exportinfo" style="color: white"></p>
