--- a/index.html
+++ b/index.html
@@ -2,6 +2,8 @@
 <html>
 <head>
     <script src='https://cdn1.kongregate.com/javascripts/kongregate_api.js'></script>
+    <script src="//cdn.jsdelivr.net/npm/bluebird@3.7.2/js/browser/bluebird.min.js"></script>
+
     <script src="break_infinity.js"></script>
     <script src="lz-string.js"></script>
     <script src="synergism.min.js"></script>
