--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
     <script src='https://cdn1.kongregate.com/javascripts/kongregate_api.js'></script>
-    <script src="https://cdn.jsdelivr.net/npm/bluebird@3.7.2/js/browser/bluebird.min.js"></script>
+    <script src="bluebird.min.js"></script>
     <script src="break_infinity.js"></script>
     <script src="lz-string.js"></script>
     <script src="Synergism.js"></script>
