--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <script src='https://cdn1.kongregate.com/javascripts/kongregate_api.js'></script>
     <script src="bluebird.min.js"></script>
     <script src="break_infinity.js"></script>
@@ -24,9 +25,10 @@
     <script src="Javascript/i18n.js"></script>
     </head>
 <main>
-
+    <div class="save">
+        <button class="saveClose"></button>
+    </div>
 <img src="Pictures/preloader.png" id="preload">    
-<meta name="viewport" content="width=device-width, initial-scale=1.0">
 <div id="navbar">
 
     <div id="resourcesrow">
