--- a/index.html
+++ b/index.html
@@ -2,6 +2,9 @@
 <html>
 <head>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta content="text/html;charset=utf-8" http-equiv="Content-Type">
+    <meta content="utf-8" http-equiv="encoding">
+    
     <script src='https://cdn1.kongregate.com/javascripts/kongregate_api.js'></script>
     <script src="bluebird.min.js"></script>
     <script src="break_infinity.js"></script>
